# nodecompute

./: CMakeLists.txt  README.md  binding.gyp  hello.js  nodecompute.js
src/: hello.cpp  nodecompute.cc  ocl.cpp  ocl.h
